# holonotes

./: Cargo.toml  README.md  package.json
dnas/notes/workdir/: dna.yaml
dnas/notes/zomes/coordinator/notes/src/: lib.rs  list_notes.rs  note.rs
dnas/notes/zomes/coordinator/profile/src/: lib.rs  profile.rs
dnas/notes/zomes/integrity/notes/src/: note.rs
dnas/notes/zomes/integrity/profile/src/: lib.rs  profile.rs
holonotes/: Cargo.toml  flake.nix
holonotes/ui/: package.json
holonotes/ui/src/: App.tsx  ClientContext.tsx  app.css  main.tsx
holonotes/ui/src/notes/notes/: NoteDetail.tsx
holonotes/workdir/: web-happ.yaml
my-holonotes-backup/dnas/notes/zomes/coordinator/notes/src/: note.rs
my-holonotes-backup/dnas/notes/zomes/integrity/notes/src/: lib.rs
my-holonotes-backup/tests/src/notes/notes/: list-notes.test.ts
my-holonotes-backup/ui/src/notes/notes/: EditNote.tsx
my-holonotes-backup/workdir/: happ.yaml
tests/src/notes/notes/: common.ts  note.test.ts
tests/src/notes/profile/: common.ts  profile.test.ts
ui/src/: App.tsx
ui/src/notes/notes/: CreateNote.tsx  ListNotes.tsx  types.ts
ui/src/notes/profile/: CreateProfile.tsx  ProfileDetail.tsx  types.ts
