[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.6.2"
hdk = "=0.5.2"
serde = "1.0"

[workspace.dependencies.notes]
path = "dnas/notes/zomes/coordinator/notes"

[workspace.dependencies.notes_integrity]
path = "dnas/notes/zomes/integrity/notes"
